tests/snapshots/sfc/js/patches__duplicate_named_imports_should_be_filtered.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: js_output.as_str()
---
import { toDisplayString as _toDisplayString, openBlock as _openBlock, createElementBlock as _createElementBlock, unref as _unref } from "vue";
import { cloneDeep } from "lodash-es";
export default {
  __name: "test",
  setup(__props) {
    const data = cloneDeep({ value: 1 });
    return (_ctx, _cache) => {
      return _openBlock(), _createElementBlock(
        "div",
        null,
        _toDisplayString(_unref(data).value),
        1
        /* TEXT */
      );
    };
  }
};
