tests/snapshots/sfc/js/patches__es6_shorthand_in_computed_style.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: js_output.as_str()
---
import { normalizeStyle as _normalizeStyle, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

import { ref } from 'vue'


export default {
  __name: 'test',
  setup(__props) {

const width = ref(100)
const height = ref(50)

return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("div", {
    style: _normalizeStyle({ width: width.value, height: height.value })
  }, "Styled", 4 /* STYLE */))
}
}

}
