tests/snapshots/sfc/js/patches__es6_shorthand_in_v_bind_object.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: js_output.as_str()
---
import { normalizeProps as _normalizeProps, guardReactiveProps as _guardReactiveProps, openBlock as _openBlock, createElementBlock as _createElementBlock } from "vue"

import { ref } from 'vue'


export default {
  __name: 'test',
  setup(__props) {

const disabled = ref(false)
const type = ref('button')

return (_ctx, _cache) => {
  return (_openBlock(), _createElementBlock("button", _normalizeProps(_guardReactiveProps({ disabled: disabled.value, type: type.value })), "Click", 16 /* FULL_PROPS */))
}
}

}
