tests/snapshots/sfc/js/patches__es6_shorthand_mixed_with_regular_properties.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: js_output.as_str()
---
import { resolveComponent as _resolveComponent, openBlock as _openBlock, createBlock as _createBlock } from "vue"

import { ref } from 'vue'


export default {
  __name: 'test',
  setup(__props) {

const name = ref('test')

return (_ctx, _cache) => {
  const _component_MyComponent = _resolveComponent("MyComponent")

  return (_openBlock(), _createBlock(_component_MyComponent, { options: { name: name.value, extra: 'value' } }, null, 8 /* PROPS */, ["options"]))
}
}

}
