tests/snapshots/sfc/js/patches__function_typed_prop_param_does_not_shadow_local_t.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: js_output.as_str()
---
import { resolveComponent as _resolveComponent, toDisplayString as _toDisplayString, createElementVNode as _createElementVNode, createVNode as _createVNode, normalizeClass as _normalizeClass, openBlock as _openBlock, createBlock as _createBlock, unref as _unref, withCtx as _withCtx } from "vue";
export default {
  __name: "test",
  props: { renderLabel: { type: Function } },
  setup(__props) {
    const props = __props;
    const { format } = useFormatter(catalog);
    return (_ctx, _cache) => {
      const _component_OptionRow = _resolveComponent("OptionRow");
      const _component_PopupMenu = _resolveComponent("PopupMenu");
      return _openBlock(), _createBlock(_component_PopupMenu, null, {
        items: _withCtx(({ close }) => [_createVNode(_component_OptionRow, null, {
          default: _withCtx(({ active }) => [_createElementVNode("li", {
            class: _normalizeClass({ active }),
            onClick: ($event) => close()
          }, [_createElementVNode(
            "span",
            null,
            _toDisplayString(_unref(format)("hello")),
            1
            /* TEXT */
          ), _createElementVNode(
            "span",
            null,
            _toDisplayString(__props.renderLabel("x", _unref(format))),
            1
            /* TEXT */
          )], 10, ["onClick"])]),
          _: 1
        })]),
        _: 1
      });
    };
  }
};
